// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`layout visual regression baselines > captures auth layout structure 1`] = `
<section
  class="col-start-1 col-end-6 row-start-1 row-end-4 min-h-screen bg-background grid grid-cols-1 lg:grid-cols-2"
>
  <div
    class="flex flex-col justify-center px-4 py-8 sm:px-6 lg:px-8 xl:px-20"
  >
    <div>
      Auth Form
    </div>
  </div>
  <aside
    class="hidden lg:flex relative overflow-hidden"
  >
    <div>
      Brand Panel
    </div>
  </aside>
</section>
`;

exports[`layout visual regression baselines > captures dashboard layout structure 1`] = `
<section
  class="col-start-1 col-end-6 row-start-1 row-end-4 min-h-screen bg-background"
>
  <header>
    Header
  </header>
  <div
    class="mx-auto flex w-full max-w-[1600px] gap-0"
  >
    <aside>
      Sidebar
    </aside>
    <main
      class="flex-1 min-w-0"
    >
      <div>
        Main Content
      </div>
    </main>
  </div>
</section>
`;

exports[`layout visual regression baselines > captures page layout structure 1`] = `
<section
  class="col-start-1 col-end-6 row-start-1 row-end-4 min-h-screen bg-background pb-20 md:pb-0"
>
  <div
    class="mx-auto w-full px-4 sm:px-6 lg:px-8 max-w-7xl"
  >
    <div>
      Page Body
    </div>
  </div>
</section>
`;
